--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -10,8 +10,8 @@
   <body>
     <p class="one">Number 1 - I'm a class!</p>
     <div id="two">Number 2 - I'm one ID.</div>
-    <p class="three">Number 3 - I'm a class, but cooler!</p>
-    <div id="four">Number 4 - I'm another ID.</div>
+    <p class="one phont">Number 3 - I'm a class, but cooler!</p>
+    <div id="four" class="font">Number 4 - I'm another ID.</div>
     <p class="one">Number 5 - I'm a class!</p>
   </body>
 </html>
