just testing git 4th

--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -20,5 +20,6 @@
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
     <button style="background-color: orange; font-size: 18px;">Inline Method</button>
+    <p>this is just for test</p>
   </body>
 </html>
