--- a/margin-and-padding/test.html
+++ b/margin-and-padding/test.html
@@ -14,6 +14,9 @@
       <div class="button-container">and a <button>BIG BUTTON</button></div>
     </div>
     <p> just adding a line to test github</p>
+    <p> <h1 class="title">I'm a card</h1>
+        <div class="content">I have content inside me..lorem ipsum blah blah blah. Here's some stuff you need to read.</div>
+        <div class="button-container">and a <button>BIG BUTTON</button></div></p>
   </body>
 </html>
 <!-- this is only a test fot github -->
