--- a/flex/03-flex-header-2/index.html
+++ b/flex/03-flex-header-2/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="header">
-      <div class="left">
+      <div class="left-side">
         <div class="logo">
           LOGO
         </div>
@@ -19,12 +19,12 @@
           <li><a href="google.com">link-three</a></li>
         </ul>
       </div>
-      <div class="right">
+      <div class="right-side">
         <button class="notifications">
           1 new notification
         </button>
         <div class="profile-image"></div>
       </div>
-    </div>
+      </div>
   </body>
 </html>
